@@ -11,10 +11,8 @@ import com.google.android.accessibility.braille.common.BrailleCommonLog;
 import com.google.android.accessibility.braille.common.BrailleCommonUtils;
 import com.google.android.accessibility.braille.common.ImeConnection;
 import com.google.android.accessibility.braille.interfaces.BrailleWord;
-import java.util.HashMap;
-import java.util.Map;
-import java.util.HashSet;
-import java.util.Set;
+import com.google.common.collect.ImmutableMap;
+import com.google.common.collect.ImmutableSet;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStream;
@@ -32,226 +30,226 @@ public class BrailleTranslateUtilsKorean {
   private static final char VOWEL_CONSONANT_START_CHARACTER = 0x1161;
   private static final char FINAL_CONSONANT_START_CHARACTER = 0x11A8;
   private static final ArrayList<String> completedHangul = new ArrayList<>();
-  private static final Set<String> EXCEPT_FROM_COMPLETED_HANGUL =
-      Set.of(
+  private static final ImmutableSet<String> EXCEPT_FROM_COMPLETED_HANGUL =
+      ImmutableSet.of(
           "엌", "읔", "같", "곁", "깥", "꼍", "낱", "돝", "릍", "뭍", "샅", "앝", "얕", "옅", "읕", "짙", "홑", "흩",
           "갚", "겊", "깊", "높", "닢", "덮", "랖", "릎", "붚", "섶", "싶", "엎", "읖", "짚", "톺");
   // This map is for converting pronunciation from initial cons. to used alone
-  private static final Map<String, String> INPUT_TEXT_MAP_FOR_SPEAKING = new HashMap<>();
-  static {
-      INPUT_TEXT_MAP_FOR_SPEAKING.put("ᄀ", "ㄱ");
-      INPUT_TEXT_MAP_FOR_SPEAKING.put("ᄁ", "ㄲ");
-      INPUT_TEXT_MAP_FOR_SPEAKING.put("ᄂ", "ㄴ");
-      INPUT_TEXT_MAP_FOR_SPEAKING.put("ᄃ", "ㄷ");
-      INPUT_TEXT_MAP_FOR_SPEAKING.put("ᄄ", "ㄸ");
-      INPUT_TEXT_MAP_FOR_SPEAKING.put("ᄅ", "ㄹ");
-      INPUT_TEXT_MAP_FOR_SPEAKING.put("ᄆ", "ㅁ");
-      INPUT_TEXT_MAP_FOR_SPEAKING.put("ᄇ", "ㅂ");
-      INPUT_TEXT_MAP_FOR_SPEAKING.put("ᄈ", "ㅃ");
-      INPUT_TEXT_MAP_FOR_SPEAKING.put("ᄉ", "ㅅ");
-      INPUT_TEXT_MAP_FOR_SPEAKING.put("ᄊ", "ㅆ");
-      INPUT_TEXT_MAP_FOR_SPEAKING.put("ᄋ", "ㅇ");
-      INPUT_TEXT_MAP_FOR_SPEAKING.put("ᄌ", "ㅈ");
-      INPUT_TEXT_MAP_FOR_SPEAKING.put("ᄍ", "ㅉ");
-      INPUT_TEXT_MAP_FOR_SPEAKING.put("ᄎ", "ㅊ");
-      INPUT_TEXT_MAP_FOR_SPEAKING.put("ᄏ", "ㅋ");
-      INPUT_TEXT_MAP_FOR_SPEAKING.put("ᄐ", "ㅌ");
-      INPUT_TEXT_MAP_FOR_SPEAKING.put("ᄑ", "ㅍ");
-      INPUT_TEXT_MAP_FOR_SPEAKING.put("ᄒ", "ㅎ");
-  }
+  private static final ImmutableMap<String, String> INPUT_TEXT_MAP_FOR_SPEAKING =
+      ImmutableMap.<String, String>builder()
+          .put("ᄀ", "ㄱ")
+          .put("ᄁ", "ㄲ")
+          .put("ᄂ", "ㄴ")
+          .put("ᄃ", "ㄷ")
+          .put("ᄄ", "ㄸ")
+          .put("ᄅ", "ㄹ")
+          .put("ᄆ", "ㅁ")
+          .put("ᄇ", "ㅂ")
+          .put("ᄈ", "ㅃ")
+          .put("ᄉ", "ㅅ")
+          .put("ᄊ", "ㅆ")
+          .put("ᄋ", "ㅇ")
+          .put("ᄌ", "ㅈ")
+          .put("ᄍ", "ㅉ")
+          .put("ᄎ", "ㅊ")
+          .put("ᄏ", "ㅋ")
+          .put("ᄐ", "ㅌ")
+          .put("ᄑ", "ㅍ")
+          .put("ᄒ", "ㅎ")
+          .buildOrThrow();
 
-  private static final Map<String, String> INITIAL_CONSONANTS_TRANSLATION_MAP = new HashMap<>();
-  static {
-      INITIAL_CONSONANTS_TRANSLATION_MAP.put("4", String.valueOf(INIT_CONSONANT_START_CHARACTER)); // ㄱ
-      INITIAL_CONSONANTS_TRANSLATION_MAP.put("6-4", String.valueOf((char) (INIT_CONSONANT_START_CHARACTER + 1))); // ㄲ
-      INITIAL_CONSONANTS_TRANSLATION_MAP.put("14", String.valueOf((char) (INIT_CONSONANT_START_CHARACTER + 2))); // ㄴ
-      INITIAL_CONSONANTS_TRANSLATION_MAP.put("24", String.valueOf((char) (INIT_CONSONANT_START_CHARACTER + 3))); // ㄷ
-      INITIAL_CONSONANTS_TRANSLATION_MAP.put("6-24", String.valueOf((char) (INIT_CONSONANT_START_CHARACTER + 4))); // ㄸ
-      INITIAL_CONSONANTS_TRANSLATION_MAP.put("5", String.valueOf((char) (INIT_CONSONANT_START_CHARACTER + 5))); // ㄹ
-      INITIAL_CONSONANTS_TRANSLATION_MAP.put("15", String.valueOf((char) (INIT_CONSONANT_START_CHARACTER + 6))); // ㅁ
-      INITIAL_CONSONANTS_TRANSLATION_MAP.put("45", String.valueOf((char) (INIT_CONSONANT_START_CHARACTER + 7))); // ㅂ
-      INITIAL_CONSONANTS_TRANSLATION_MAP.put("6-45", String.valueOf((char) (INIT_CONSONANT_START_CHARACTER + 8))); // ㅃ
-      INITIAL_CONSONANTS_TRANSLATION_MAP.put("6", String.valueOf((char) (INIT_CONSONANT_START_CHARACTER + 9))); // ㅅ
-      INITIAL_CONSONANTS_TRANSLATION_MAP.put("6-6", String.valueOf((char) (INIT_CONSONANT_START_CHARACTER + 10))); // ㅆ
-      INITIAL_CONSONANTS_TRANSLATION_MAP.put("1245", String.valueOf((char) (INIT_CONSONANT_START_CHARACTER + 11))); // ㅇ
-      INITIAL_CONSONANTS_TRANSLATION_MAP.put("46", String.valueOf((char) (INIT_CONSONANT_START_CHARACTER + 12))); // ㅈ
-      INITIAL_CONSONANTS_TRANSLATION_MAP.put("6-46", String.valueOf((char) (INIT_CONSONANT_START_CHARACTER + 13))); // ㅉ
-      INITIAL_CONSONANTS_TRANSLATION_MAP.put("56", String.valueOf((char) (INIT_CONSONANT_START_CHARACTER + 14))); // ㅊ
-      INITIAL_CONSONANTS_TRANSLATION_MAP.put("124", String.valueOf((char) (INIT_CONSONANT_START_CHARACTER + 15))); // ㅋ
-      INITIAL_CONSONANTS_TRANSLATION_MAP.put("125", String.valueOf((char) (INIT_CONSONANT_START_CHARACTER + 16))); // ㅌ
-      INITIAL_CONSONANTS_TRANSLATION_MAP.put("145", String.valueOf((char) (INIT_CONSONANT_START_CHARACTER + 17))); // ㅍ
-      INITIAL_CONSONANTS_TRANSLATION_MAP.put("245", String.valueOf((char) (INIT_CONSONANT_START_CHARACTER + 18))); // ㅎ
-  }
+  private static final ImmutableMap<String, String> INITIAL_CONSONANTS_TRANSLATION_MAP =
+      ImmutableMap.<String, String>builder()
+          .put("4", String.valueOf(INIT_CONSONANT_START_CHARACTER)) // ㄱ
+          .put("6-4", String.valueOf((char) (INIT_CONSONANT_START_CHARACTER + 1))) // ㄲ
+          .put("14", String.valueOf((char) (INIT_CONSONANT_START_CHARACTER + 2))) // ㄴ
+          .put("24", String.valueOf((char) (INIT_CONSONANT_START_CHARACTER + 3))) // ㄷ
+          .put("6-24", String.valueOf((char) (INIT_CONSONANT_START_CHARACTER + 4))) // ㄸ
+          .put("5", String.valueOf((char) (INIT_CONSONANT_START_CHARACTER + 5))) // ㄹ
+          .put("15", String.valueOf((char) (INIT_CONSONANT_START_CHARACTER + 6))) // ㅁ
+          .put("45", String.valueOf((char) (INIT_CONSONANT_START_CHARACTER + 7))) // ㅂ
+          .put("6-45", String.valueOf((char) (INIT_CONSONANT_START_CHARACTER + 8))) // ㅃ
+          .put("6", String.valueOf((char) (INIT_CONSONANT_START_CHARACTER + 9))) // ㅅ
+          .put("6-6", String.valueOf((char) (INIT_CONSONANT_START_CHARACTER + 10))) // ㅆ
+          .put("1245", String.valueOf((char) (INIT_CONSONANT_START_CHARACTER + 11))) // ㅇ
+          .put("46", String.valueOf((char) (INIT_CONSONANT_START_CHARACTER + 12))) // ㅈ
+          .put("6-46", String.valueOf((char) (INIT_CONSONANT_START_CHARACTER + 13))) // ㅉ
+          .put("56", String.valueOf((char) (INIT_CONSONANT_START_CHARACTER + 14))) // ㅊ
+          .put("124", String.valueOf((char) (INIT_CONSONANT_START_CHARACTER + 15))) // ㅋ
+          .put("125", String.valueOf((char) (INIT_CONSONANT_START_CHARACTER + 16))) // ㅌ
+          .put("145", String.valueOf((char) (INIT_CONSONANT_START_CHARACTER + 17))) // ㅍ
+          .put("245", String.valueOf((char) (INIT_CONSONANT_START_CHARACTER + 18))) // ㅎ
+          .buildOrThrow();
 
-  private static final Map<String, String> VOWEL_TRANSLATION_MAP = new HashMap<>();
-  static {
-      VOWEL_TRANSLATION_MAP.put("126", String.valueOf(VOWEL_CONSONANT_START_CHARACTER)); // ㅏ
-      VOWEL_TRANSLATION_MAP.put("1235", String.valueOf((char) (VOWEL_CONSONANT_START_CHARACTER + 1))); // ㅐ
-      VOWEL_TRANSLATION_MAP.put("345", String.valueOf((char) (VOWEL_CONSONANT_START_CHARACTER + 2))); // ㅑ
-      VOWEL_TRANSLATION_MAP.put("345-1235", String.valueOf((char) (VOWEL_CONSONANT_START_CHARACTER + 3))); // ㅒ
-      VOWEL_TRANSLATION_MAP.put("234", String.valueOf((char) (VOWEL_CONSONANT_START_CHARACTER + 4))); // ㅓ
-      VOWEL_TRANSLATION_MAP.put("1345", String.valueOf((char) (VOWEL_CONSONANT_START_CHARACTER + 5))); // ㅔ
-      VOWEL_TRANSLATION_MAP.put("156", String.valueOf((char) (VOWEL_CONSONANT_START_CHARACTER + 6))); // ㅕ
-      VOWEL_TRANSLATION_MAP.put("34", String.valueOf((char) (VOWEL_CONSONANT_START_CHARACTER + 7))); // ㅖ
-      VOWEL_TRANSLATION_MAP.put("136", String.valueOf((char) (VOWEL_CONSONANT_START_CHARACTER + 8))); // ㅗ
-      VOWEL_TRANSLATION_MAP.put("1236", String.valueOf((char) (VOWEL_CONSONANT_START_CHARACTER + 9))); // ㅘ
-      VOWEL_TRANSLATION_MAP.put("1236-1235", String.valueOf((char) (VOWEL_CONSONANT_START_CHARACTER + 10))); // ㅙ
-      VOWEL_TRANSLATION_MAP.put("13456", String.valueOf((char) (VOWEL_CONSONANT_START_CHARACTER + 11))); // ㅚ
-      VOWEL_TRANSLATION_MAP.put("346", String.valueOf((char) (VOWEL_CONSONANT_START_CHARACTER + 12))); // ㅛ
-      VOWEL_TRANSLATION_MAP.put("134", String.valueOf((char) (VOWEL_CONSONANT_START_CHARACTER + 13))); // ㅜ
-      VOWEL_TRANSLATION_MAP.put("1234", String.valueOf((char) (VOWEL_CONSONANT_START_CHARACTER + 14))); // ㅝ
-      VOWEL_TRANSLATION_MAP.put("1234-1235", String.valueOf((char) (VOWEL_CONSONANT_START_CHARACTER + 15))); // ㅞ
-      VOWEL_TRANSLATION_MAP.put("134-1235", String.valueOf((char) (VOWEL_CONSONANT_START_CHARACTER + 16))); // ㅟ
-      VOWEL_TRANSLATION_MAP.put("146", String.valueOf((char) (VOWEL_CONSONANT_START_CHARACTER + 17))); // ㅠ
-      VOWEL_TRANSLATION_MAP.put("246", String.valueOf((char) (VOWEL_CONSONANT_START_CHARACTER + 18))); // ㅡ
-      VOWEL_TRANSLATION_MAP.put("2456", String.valueOf((char) (VOWEL_CONSONANT_START_CHARACTER + 19))); // ㅢ
-      VOWEL_TRANSLATION_MAP.put("135", String.valueOf((char) (VOWEL_CONSONANT_START_CHARACTER + 20))); // ㅣ
-  }
-  private static final Map<String, String> FINAL_CONSONANTS_TRANSLATION_MAP = new HashMap<>();
-  static {
-      FINAL_CONSONANTS_TRANSLATION_MAP.put("1", String.valueOf(FINAL_CONSONANT_START_CHARACTER)); // ㄱ
-      FINAL_CONSONANTS_TRANSLATION_MAP.put("1-1", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 1))); // ㄲ
-      FINAL_CONSONANTS_TRANSLATION_MAP.put("1-3", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 2))); // ㄳ
-      FINAL_CONSONANTS_TRANSLATION_MAP.put("25", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 3))); // ㄴ
-      FINAL_CONSONANTS_TRANSLATION_MAP.put("25-13", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 4))); // ㄵ
-      FINAL_CONSONANTS_TRANSLATION_MAP.put("25-356", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 5))); // ㄶ
-      FINAL_CONSONANTS_TRANSLATION_MAP.put("35", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 6))); // ㄷ
-      FINAL_CONSONANTS_TRANSLATION_MAP.put("2", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 7))); // ㄹ
-      FINAL_CONSONANTS_TRANSLATION_MAP.put("2-1", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 8))); // ㄺ
-      FINAL_CONSONANTS_TRANSLATION_MAP.put("2-26", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 9))); // ㄻ
-      FINAL_CONSONANTS_TRANSLATION_MAP.put("2-12", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 10))); // ㄼ
-      FINAL_CONSONANTS_TRANSLATION_MAP.put("2-3", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 11))); // ㄽ
-      FINAL_CONSONANTS_TRANSLATION_MAP.put("2-236", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 12))); // ㄾ
-      FINAL_CONSONANTS_TRANSLATION_MAP.put("2-256", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 13))); // ㄿ
-      FINAL_CONSONANTS_TRANSLATION_MAP.put("2-356", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 14))); // ㅀ
-      FINAL_CONSONANTS_TRANSLATION_MAP.put("26", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 15))); // ㅁ
-      FINAL_CONSONANTS_TRANSLATION_MAP.put("12", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 16))); // ㅂ
-      FINAL_CONSONANTS_TRANSLATION_MAP.put("12-3", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 17))); // ㅄ
-      FINAL_CONSONANTS_TRANSLATION_MAP.put("3", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 18))); // ㅅ
-      FINAL_CONSONANTS_TRANSLATION_MAP.put("34", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 19))); // ㅆ
-      FINAL_CONSONANTS_TRANSLATION_MAP.put("2356", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 20))); // ㅇ
-      FINAL_CONSONANTS_TRANSLATION_MAP.put("13", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 21))); // ㅈ
-      FINAL_CONSONANTS_TRANSLATION_MAP.put("23", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 22))); // ㅊ
-      FINAL_CONSONANTS_TRANSLATION_MAP.put("235", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 23))); // ㅋ
-      FINAL_CONSONANTS_TRANSLATION_MAP.put("236", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 24))); // ㅌ
-      FINAL_CONSONANTS_TRANSLATION_MAP.put("256", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 25))); // ㅍ
-      FINAL_CONSONANTS_TRANSLATION_MAP.put("356", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 26))); // ㅎ
-  }
+  private static final ImmutableMap<String, String> VOWEL_TRANSLATION_MAP =
+      ImmutableMap.<String, String>builder()
+          .put("126", String.valueOf(VOWEL_CONSONANT_START_CHARACTER)) // ㅏ
+          .put("1235", String.valueOf((char) (VOWEL_CONSONANT_START_CHARACTER + 1))) // ㅐ
+          .put("345", String.valueOf((char) (VOWEL_CONSONANT_START_CHARACTER + 2))) // ㅑ
+          .put("345-1235", String.valueOf((char) (VOWEL_CONSONANT_START_CHARACTER + 3))) // ㅒ
+          .put("234", String.valueOf((char) (VOWEL_CONSONANT_START_CHARACTER + 4))) // ㅓ
+          .put("1345", String.valueOf((char) (VOWEL_CONSONANT_START_CHARACTER + 5))) // ㅔ
+          .put("156", String.valueOf((char) (VOWEL_CONSONANT_START_CHARACTER + 6))) // ㅕ
+          .put("34", String.valueOf((char) (VOWEL_CONSONANT_START_CHARACTER + 7))) // ㅖ
+          .put("136", String.valueOf((char) (VOWEL_CONSONANT_START_CHARACTER + 8))) // ㅗ
+          .put("1236", String.valueOf((char) (VOWEL_CONSONANT_START_CHARACTER + 9))) // ㅘ
+          .put("1236-1235", String.valueOf((char) (VOWEL_CONSONANT_START_CHARACTER + 10))) // ㅙ
+          .put("13456", String.valueOf((char) (VOWEL_CONSONANT_START_CHARACTER + 11))) // ㅚ
+          .put("346", String.valueOf((char) (VOWEL_CONSONANT_START_CHARACTER + 12))) // ㅛ
+          .put("134", String.valueOf((char) (VOWEL_CONSONANT_START_CHARACTER + 13))) // ㅜ
+          .put("1234", String.valueOf((char) (VOWEL_CONSONANT_START_CHARACTER + 14))) // ㅝ
+          .put("1234-1235", String.valueOf((char) (VOWEL_CONSONANT_START_CHARACTER + 15))) // ㅞ
+          .put("134-1235", String.valueOf((char) (VOWEL_CONSONANT_START_CHARACTER + 16))) // ㅟ
+          .put("146", String.valueOf((char) (VOWEL_CONSONANT_START_CHARACTER + 17))) // ㅠ
+          .put("246", String.valueOf((char) (VOWEL_CONSONANT_START_CHARACTER + 18))) // ㅡ
+          .put("2456", String.valueOf((char) (VOWEL_CONSONANT_START_CHARACTER + 19))) // ㅢ
+          .put("135", String.valueOf((char) (VOWEL_CONSONANT_START_CHARACTER + 20))) // ㅣ
+          .buildOrThrow();
+  private static final ImmutableMap<String, String> FINAL_CONSONANTS_TRANSLATION_MAP =
+      ImmutableMap.<String, String>builder()
+          .put("1", String.valueOf(FINAL_CONSONANT_START_CHARACTER)) // ㄱ
+          .put("1-1", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 1))) // ㄲ
+          .put("1-3", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 2))) // ㄳ
+          .put("25", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 3))) // ㄴ
+          .put("25-13", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 4))) // ㄵ
+          .put("25-356", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 5))) // ㄶ
+          .put("35", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 6))) // ㄷ
+          .put("2", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 7))) // ㄹ
+          .put("2-1", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 8))) // ㄺ
+          .put("2-26", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 9))) // ㄻ
+          .put("2-12", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 10))) // ㄼ
+          .put("2-3", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 11))) // ㄽ
+          .put("2-236", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 12))) // ㄾ
+          .put("2-256", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 13))) // ㄿ
+          .put("2-356", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 14))) // ㅀ
+          .put("26", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 15))) // ㅁ
+          .put("12", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 16))) // ㅂ
+          .put("12-3", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 17))) // ㅄ
+          .put("3", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 18))) // ㅅ
+          .put("34", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 19))) // ㅆ
+          .put("2356", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 20))) // ㅇ
+          .put("13", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 21))) // ㅈ
+          .put("23", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 22))) // ㅊ
+          .put("235", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 23))) // ㅋ
+          .put("236", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 24))) // ㅌ
+          .put("256", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 25))) // ㅍ
+          .put("356", String.valueOf((char) (FINAL_CONSONANT_START_CHARACTER + 26))) // ㅎ
+          .buildOrThrow();
   // If vowel is coming at first, it should be added "ㅇ" consonant
-  private static final Map<String, String> SPECIAL_O_TRANSLATION_MAP = new HashMap<>();
-  static {
-      SPECIAL_O_TRANSLATION_MAP.put("126", "아");
-      SPECIAL_O_TRANSLATION_MAP.put("345", "야");
-      SPECIAL_O_TRANSLATION_MAP.put("234", "어");
-      SPECIAL_O_TRANSLATION_MAP.put("156", "여");
-      SPECIAL_O_TRANSLATION_MAP.put("136", "오");
-      SPECIAL_O_TRANSLATION_MAP.put("346", "요");
-      SPECIAL_O_TRANSLATION_MAP.put("134", "우");
-      SPECIAL_O_TRANSLATION_MAP.put("146", "유");
-      SPECIAL_O_TRANSLATION_MAP.put("246", "으");
-      SPECIAL_O_TRANSLATION_MAP.put("135", "이");
-      SPECIAL_O_TRANSLATION_MAP.put("36-1235", "애");
-      SPECIAL_O_TRANSLATION_MAP.put("1235", "애");
-      SPECIAL_O_TRANSLATION_MAP.put("1345", "에");
-      SPECIAL_O_TRANSLATION_MAP.put("345-1235", "얘");
-      SPECIAL_O_TRANSLATION_MAP.put("34", "예");
-      SPECIAL_O_TRANSLATION_MAP.put("36-34", "예");
-      SPECIAL_O_TRANSLATION_MAP.put("1236", "와");
-      SPECIAL_O_TRANSLATION_MAP.put("1236-1235", "왜");
-      SPECIAL_O_TRANSLATION_MAP.put("13456", "외");
-      SPECIAL_O_TRANSLATION_MAP.put("2456", "의");
-      SPECIAL_O_TRANSLATION_MAP.put("1234", "워");
-      SPECIAL_O_TRANSLATION_MAP.put("1234-1235", "웨");
-      SPECIAL_O_TRANSLATION_MAP.put("134-1235", "위");
-  }
-  private static final Map<String, String> OPEN_SYMBOL_TRANSLATION_MAP = new HashMap<>();
-  static {
-      OPEN_SYMBOL_TRANSLATION_MAP.put("236", "“");
-      OPEN_SYMBOL_TRANSLATION_MAP.put("6-236", "'");
-      OPEN_SYMBOL_TRANSLATION_MAP.put("236-3", "(");
-      OPEN_SYMBOL_TRANSLATION_MAP.put("236-2", "{");
-      OPEN_SYMBOL_TRANSLATION_MAP.put("236-23", "[");
-      OPEN_SYMBOL_TRANSLATION_MAP.put("5-236", "<");
-      OPEN_SYMBOL_TRANSLATION_MAP.put("56-236", "《");
-      OPEN_SYMBOL_TRANSLATION_MAP.put("456-236", "?");
-      OPEN_SYMBOL_TRANSLATION_MAP.put("456-34", "/");
-      OPEN_SYMBOL_TRANSLATION_MAP.put("4-2456", "￦");
-      OPEN_SYMBOL_TRANSLATION_MAP.put("4-145", "$");
-      OPEN_SYMBOL_TRANSLATION_MAP.put("26", "+");
-      OPEN_SYMBOL_TRANSLATION_MAP.put("35", "-");
-      OPEN_SYMBOL_TRANSLATION_MAP.put("25-25", "=");
-      OPEN_SYMBOL_TRANSLATION_MAP.put("36-36", "~");
-      OPEN_SYMBOL_TRANSLATION_MAP.put("36", "-");
-      OPEN_SYMBOL_TRANSLATION_MAP.put("235", "!");
-      OPEN_SYMBOL_TRANSLATION_MAP.put("256", ".");
-  }
-  private static final Map<String, String> CLOSE_SYMBOL_TRANSLATION_MAP = new HashMap<>();
-  static {
-      CLOSE_SYMBOL_TRANSLATION_MAP.put("356", "”");
-      CLOSE_SYMBOL_TRANSLATION_MAP.put("356-3", "'");
-      CLOSE_SYMBOL_TRANSLATION_MAP.put("6-356", ")");
-      CLOSE_SYMBOL_TRANSLATION_MAP.put("5-356", "}");
-      CLOSE_SYMBOL_TRANSLATION_MAP.put("56-356", "]");
-      CLOSE_SYMBOL_TRANSLATION_MAP.put("356-2", ">");
-      CLOSE_SYMBOL_TRANSLATION_MAP.put("356-23", "》");
-  }
+  private static final ImmutableMap<String, String> SPECIAL_O_TRANSLATION_MAP =
+      ImmutableMap.<String, String>builder()
+          .put("126", "아")
+          .put("345", "야")
+          .put("234", "어")
+          .put("156", "여")
+          .put("136", "오")
+          .put("346", "요")
+          .put("134", "우")
+          .put("146", "유")
+          .put("246", "으")
+          .put("135", "이")
+          .put("36-1235", "애")
+          .put("1235", "애")
+          .put("1345", "에")
+          .put("345-1235", "얘")
+          .put("34", "예")
+          .put("36-34", "예")
+          .put("1236", "와")
+          .put("1236-1235", "왜")
+          .put("13456", "외")
+          .put("2456", "의")
+          .put("1234", "워")
+          .put("1234-1235", "웨")
+          .put("134-1235", "위")
+          .buildOrThrow();
+  private static final ImmutableMap<String, String> OPEN_SYMBOL_TRANSLATION_MAP =
+      ImmutableMap.<String, String>builder()
+          .put("236", "“")
+          .put("6-236", "'")
+          .put("236-3", "(")
+          .put("236-2", "{")
+          .put("236-23", "[")
+          .put("5-236", "<")
+          .put("56-236", "《")
+          .put("456-236", "?")
+          .put("456-34", "/")
+          .put("4-2456", "￦")
+          .put("4-145", "$")
+          .put("26", "+")
+          .put("35", "-")
+          .put("25-25", "=")
+          .put("36-36", "~")
+          .put("36", "-")
+          .put("235", "!")
+          .put("256", ".")
+          .buildOrThrow();
+  private static final ImmutableMap<String, String> CLOSE_SYMBOL_TRANSLATION_MAP =
+      ImmutableMap.<String, String>builder()
+          .put("356", "”")
+          .put("356-3", "'")
+          .put("6-356", ")")
+          .put("5-356", "}")
+          .put("56-356", "]")
+          .put("356-2", ">")
+          .put("356-23", "》")
+          .buildOrThrow();
   // For contracted Korean braille only.
-  private static final Map<String, String> CHANGE_SYMBOL_TRANSLATION_MAP = new HashMap<>();
-  static {
-      CHANGE_SYMBOL_TRANSLATION_MAP.put("256-", ". ");
-      CHANGE_SYMBOL_TRANSLATION_MAP.put("236-", "? ");
-      CHANGE_SYMBOL_TRANSLATION_MAP.put("235-", "!");
-  }
-  private static final Map<String, String> SYMBOL_TRANSLATION_MAP = new HashMap<>();
-  static {
-      SYMBOL_TRANSLATION_MAP.put("356-1234", "%");
-      SYMBOL_TRANSLATION_MAP.put("26", "+");
-      SYMBOL_TRANSLATION_MAP.put("35", "-");
-      SYMBOL_TRANSLATION_MAP.put("16", "×");
-      SYMBOL_TRANSLATION_MAP.put("34-34", "÷");
-      SYMBOL_TRANSLATION_MAP.put("25-25", "=");
-      SYMBOL_TRANSLATION_MAP.put("36-36", "~");
-      SYMBOL_TRANSLATION_MAP.put("36", "-");
-      SYMBOL_TRANSLATION_MAP.put("6-6-6", "···");
-      SYMBOL_TRANSLATION_MAP.put("235", "!");
-      SYMBOL_TRANSLATION_MAP.put("256", ".");
-      SYMBOL_TRANSLATION_MAP.put("5-23", "·");
-      SYMBOL_TRANSLATION_MAP.put("2", ",");
-      SYMBOL_TRANSLATION_MAP.put("5", ",");
-      SYMBOL_TRANSLATION_MAP.put("5-", ", ");
-      SYMBOL_TRANSLATION_MAP.put("236", "?");
-      SYMBOL_TRANSLATION_MAP.put("456-236", "?");
-      SYMBOL_TRANSLATION_MAP.put("5-2", ":");
-      SYMBOL_TRANSLATION_MAP.put("56-23", ";");
-      SYMBOL_TRANSLATION_MAP.put("35-35", "※");
-      SYMBOL_TRANSLATION_MAP.put("456-34", "/");
-  }
-  private static final Map<String, String> NUMBER_TRANSLATION_MAP = new HashMap<>();
-  static {
-      NUMBER_TRANSLATION_MAP.put("3456", "");
-      NUMBER_TRANSLATION_MAP.put("1", "1");
-      NUMBER_TRANSLATION_MAP.put("12", "2");
-      NUMBER_TRANSLATION_MAP.put("14", "3");
-      NUMBER_TRANSLATION_MAP.put("145", "4");
-      NUMBER_TRANSLATION_MAP.put("15", "5");
-      NUMBER_TRANSLATION_MAP.put("124", "6");
-      NUMBER_TRANSLATION_MAP.put("1245", "7");
-      NUMBER_TRANSLATION_MAP.put("125", "8");
-      NUMBER_TRANSLATION_MAP.put("24", "9");
-      NUMBER_TRANSLATION_MAP.put("245", "0");
-  }
-  private static final Map<String, String> CIRCLE_NUMBER_TRANSLATION_MAP = new HashMap<>();
-  static {
-      CIRCLE_NUMBER_TRANSLATION_MAP.put("3456-2", "①");
-      CIRCLE_NUMBER_TRANSLATION_MAP.put("3456-23", "②");
-      CIRCLE_NUMBER_TRANSLATION_MAP.put("3456-25", "③");
-      CIRCLE_NUMBER_TRANSLATION_MAP.put("3456-256", "④");
-      CIRCLE_NUMBER_TRANSLATION_MAP.put("3456-26", "⑤");
-      CIRCLE_NUMBER_TRANSLATION_MAP.put("3456-235", "⑥");
-      CIRCLE_NUMBER_TRANSLATION_MAP.put("3456-2356", "⑦");
-      CIRCLE_NUMBER_TRANSLATION_MAP.put("3456-236", "⑧");
-      CIRCLE_NUMBER_TRANSLATION_MAP.put("3456-35", "⑨");
-  }
+  private static final ImmutableMap<String, String> CHANGE_SYMBOL_TRANSLATION_MAP =
+      ImmutableMap.<String, String>builder()
+          .put("256-", ". ")
+          .put("236-", "? ")
+          .put("235-", "!")
+          .buildOrThrow();
+  private static final ImmutableMap<String, String> SYMBOL_TRANSLATION_MAP =
+      ImmutableMap.<String, String>builder()
+          .put("356-1234", "%")
+          .put("26", "+")
+          .put("35", "-")
+          .put("16", "×")
+          .put("34-34", "÷")
+          .put("25-25", "=")
+          .put("36-36", "~")
+          .put("36", "-")
+          .put("6-6-6", "···")
+          .put("235", "!")
+          .put("256", ".")
+          .put("5-23", "·")
+          .put("2", ",")
+          .put("5", ",")
+          .put("5-", ", ")
+          .put("236", "?")
+          .put("456-236", "?")
+          .put("5-2", ":")
+          .put("56-23", ";")
+          .put("35-35", "※")
+          .put("456-34", "/")
+          .buildOrThrow();
+  private static final ImmutableMap<String, String> NUMBER_TRANSLATION_MAP =
+      ImmutableMap.<String, String>builder()
+          .put("3456", "")
+          .put("1", "1")
+          .put("12", "2")
+          .put("14", "3")
+          .put("145", "4")
+          .put("15", "5")
+          .put("124", "6")
+          .put("1245", "7")
+          .put("125", "8")
+          .put("24", "9")
+          .put("245", "0")
+          .buildOrThrow();
+  private static final ImmutableMap<String, String> CIRCLE_NUMBER_TRANSLATION_MAP =
+      ImmutableMap.<String, String>builder()
+          .put("3456-2", "①")
+          .put("3456-23", "②")
+          .put("3456-25", "③")
+          .put("3456-256", "④")
+          .put("3456-26", "⑤")
+          .put("3456-235", "⑥")
+          .put("3456-2356", "⑦")
+          .put("3456-236", "⑧")
+          .put("3456-35", "⑨")
+          .buildOrThrow();
 
   public static String combineDots(String firstDot, String secondDot) {
     return firstDot + HYPHEN + secondDot;
